--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "test_three",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://github.com/erickturriago/sistema_habitabilidad/",
   "type": "module",
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "vite": "^5.1.6"
   },
   "dependencies": {
